crates/ruff/src/rules/flake8_bandit/snapshots/ruff__rules__flake8_bandit__tests__S112_S112.py.snap
---
source: crates/ruff/src/rules/flake8_bandit/mod.rs
expression: diagnostics
---
- kind:
    name: TryExceptContinue
    body: "`try`-`except`-`continue` detected, consider logging the exception"
    commit: ~
    fixable: false
  location:
    row: 3
    column: 0
  end_location:
    row: 4
    column: 12
  fix: ~
  parent: ~
- kind:
    name: TryExceptContinue
    body: "`try`-`except`-`continue` detected, consider logging the exception"
    commit: ~
    fixable: false
  location:
    row: 8
    column: 0
  end_location:
    row: 9
    column: 12
  fix: ~
  parent: ~
- kind:
    name: TryExceptContinue
    body: "`try`-`except`-`continue` detected, consider logging the exception"
    commit: ~
    fixable: false
  location:
    row: 13
    column: 0
  end_location:
    row: 14
    column: 12
  fix: ~
  parent: ~
- kind:
    name: TryExceptContinue
    body: "`try`-`except`-`continue` detected, consider logging the exception"
    commit: ~
    fixable: false
  location:
    row: 18
    column: 0
  end_location:
    row: 19
    column: 12
  fix: ~
  parent: ~

