crates/ruff/src/rules/flake8_bandit/snapshots/ruff__rules__flake8_bandit__tests__S201_S201.py.snap
---
source: crates/ruff/src/rules/flake8_bandit/mod.rs
---
S201.py:10:9: S201 Use of `debug=True` in Flask app detected
   |
 9 | #bad
10 | app.run(debug=True)
   |         ^^^^^^^^^^ S201
11 | 
12 | #okay
   |


