crates/ruff/src/rules/flake8_bandit/snapshots/ruff__rules__flake8_bandit__tests__S307_S307.py.snap
---
source: crates/ruff/src/rules/flake8_bandit/mod.rs
---
S307.py:3:7: S307 Use of possibly insecure function; consider using `ast.literal_eval`
  |
1 | import os
2 | 
3 | print(eval("1+1"))  # S307
  |       ^^^^^^^^^^^ S307
4 | print(eval("os.getcwd()"))  # S307
  |

S307.py:4:7: S307 Use of possibly insecure function; consider using `ast.literal_eval`
  |
3 | print(eval("1+1"))  # S307
4 | print(eval("os.getcwd()"))  # S307
  |       ^^^^^^^^^^^^^^^^^^^ S307
  |


