crates/ruff/src/rules/flake8_bandit/snapshots/ruff__rules__flake8_bandit__tests__S312_S312.py.snap
---
source: crates/ruff/src/rules/flake8_bandit/mod.rs
---
./resources/test/fixtures/flake8_bandit/S312.py:3:1: S312 Telnet-related functions are being called. Telnet is considered insecure. Use SSH or some other encrypted protocol.
  |
3 | from telnetlib import Telnet
4 | 
5 | Telnet("localhost", 23)
  | ^^^^^^^^^^^^^^^^^^^^^^^ S312
  |


