crates/ruff/src/rules/flake8_bandit/snapshots/ruff__rules__flake8_bandit__tests__S508_S508.py.snap
---
source: crates/ruff/src/rules/flake8_bandit/mod.rs
---
./resources/test/fixtures/flake8_bandit/S508.py:3:33: S508 The use of SNMPv1 and SNMPv2 is insecure. Use SNMPv3 if able.
  |
3 | from pysnmp.hlapi import CommunityData
4 | 
5 | CommunityData("public", mpModel=0)  # S508
  |                                 ^ S508
6 | CommunityData("public", mpModel=1)  # S508
  |

./resources/test/fixtures/flake8_bandit/S508.py:4:33: S508 The use of SNMPv1 and SNMPv2 is insecure. Use SNMPv3 if able.
  |
4 | CommunityData("public", mpModel=0)  # S508
5 | CommunityData("public", mpModel=1)  # S508
  |                                 ^ S508
6 | 
7 | CommunityData("public", mpModel=2)  # OK
  |


