crates/ruff/src/rules/flake8_bandit/snapshots/ruff__rules__flake8_bandit__tests__S601_S601.py.snap
---
source: crates/ruff/src/rules/flake8_bandit/mod.rs
---
S601.py:3:1: S601 Possible shell injection via Paramiko call, check inputs are properly sanitized
  |
3 | import paramiko
4 | 
5 | paramiko.exec_command('something; really; unsafe')
  | ^^^^^^^^^^^^^^^^^^^^^ S601
  |


